29 Mai -> Refactorizat tot ce se poate + fix la undesired preferinte in functie de preferinte si invers